# Kaptn

./: .gitignore  README.md  autopilot.sh  kaptn.config.json  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
bridge/: __init__.py  lifecycle.py  logging_config.py  main.py  models.py  status_report.py
bridge/audit/: __init__.py  audit_logger.py
bridge/autopilot/: __init__.py  auto_pilot_engine.py  auto_reply_engine.py  auto_reply_rule.py  escalation_handler.py  loop_detector.py  rule_evaluator.py  temp_rule_manager.py
bridge/cdp/: __init__.py  cdp_connection.py  cdp_discovery.py  cdp_evaluator.py
bridge/claude/: __init__.py  claude_adapter.py  claude_setup.py  cli.py  hook_client.py  hook_server.py  tool_classifier.py
bridge/config/: __init__.py  config_manager.py
bridge/drivers/: __init__.py  ide_driver.py  windsurf_driver.py
bridge/logging/: message_logger.py
bridge/mcp/: __init__.py  _bridge_worker.py  _progress.py  _state.py  mcp_server.py
bridge/monitors/: __init__.py
bridge/selectors/: __init__.py
bridge/server/: __init__.py
bridge/setup/: windsurf_setup.py
bridge/standalone/: __init__.py  runner.py  state_store.py
bridge/window/: __init__.py
commands/: log.md  reset.md  status.md
docs/: DESIGN.md  KaptnResearch.md
docs/adr/: 0001-files-changed-and-diffs.md  0002-session-story-and-activity.md  0003-sensitive-and-external-actions.md  0004-push-alerts.md  0005-config-driven-tool-allowlist.md  (+8 more)
hooks/: hooks.json
scripts/: cdp_inspect.py  kaptn-ctl  kaptn-hook
tests/: conftest.py
(+64 files in other folders)
